--- a/problems/csharp/TwoSum/TwoSum.csproj
+++ b/problems/csharp/TwoSum/TwoSum.csproj
@@ -4,6 +4,14 @@
     <ProjectReference Include="..\TwoSum\TwoSum\TwoSum.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="xUnit" Version="2.9.3" />
+    <PackageReference Include="xUnit.runner.visualstudio" Version="3.0.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
