--- a/problems/csharp/TwoSum/TwoSumApp.Tests/TwoSumApp.Tests.csproj
+++ b/problems/csharp/TwoSum/TwoSumApp.Tests/TwoSumApp.Tests.csproj
@@ -11,8 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
-      <PackageReference Include="xUnit" Version="2.9.3" />
-    <PackageReference Include="xUnit.runner.visualstudio" Version="3.0.2">
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TwoSum.csproj" />
+    <ProjectReference Include="..\TwoSumApp\TwoSumApp.csproj" />
   </ItemGroup>
 
 </Project>
