implement Two Sum solution in java usgin two-pass has table

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+# Arquivos compilados do Java
+*.class
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
